--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,10 @@
+
 .top-menu {
   position: relative; 
   background: black;
   box-shadow: inset 0 0 10px #ccc;
+  max-width: 980px;
+  
 }
 .top-menu:before,
 .top-menu:after {
@@ -60,4 +63,84 @@
 }
 @media (max-width: 500px) {
   .menu-main li {display: block;}
+   
+}
+header .banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 980px;
+}
+
+header .banner .title {
+    font-size: 3rem;
+    font-family: 'Trade&nbspWinds';   
+    text-transform: uppercase;
+    color: var(--secondary-color);
+}
+main .publications-list .article-card img {
+    display: block;
+    width: 100%;
+}
+
+main .publications-list .article-card .button-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+@media (min-width: 580px) {
+    main .publications-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 5px;
+    }
+}
+
+@media (min-width: 660px) {
+    main .publications-list {
+        grid-template-columns: 1fr 1fr 1fr;  
+    }
+}
+
+@media (min-width: 980px) {
+    main .publications-list {
+        grid-template-columns: repeat(4, 1fr);  
+    }
+}
+
+.button {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-weight: 300;
+    color: #FFFFFF;
+    text-align: center;
+    transition: all 0.3s;
+    background-color: transparent;
+}
+
+.button:hover {
+    color: #000000;
+    background-color: #FFFFFF;
+    cursor: pointer;
+}
+
+.card-button {
+    border-color: black;
+    color: black;
+}
+
+.card-button:hover {
+    background-color: black;
+    color: white;
+}
+
+
+    
+    
 }
