--- a/css/index.css
+++ b/css/index.css
@@ -63,14 +63,16 @@
 }
 @media (max-width: 500px) {
   .menu-main li {display: block;}
-   
+  /* закінчилася менюшка */
+
 }
 header .banner {
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
     flex-direction: column;
     max-width: 980px;
+    
 }
 
 header .banner .title {
@@ -139,8 +141,10 @@ main .publications-list .article-card .button-container {
     background-color: black;
     color: white;
 }
-
-
-    
-    
+#aboutme{
+    color:#000000;
+    text-decoration: none;
+}
+main{
+    max-width: 980px;
 }
