--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body{
     max-width: 980px;
-    background-image: url(../images/pivo.jpg);
+    background-image: 
     padding: 0;
     margin: 0;
     max-width: 980px;
