--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ body{
   list-style: none;
   padding: 0 30px;
   margin: 0;
-  font-size: 25px;
+  font-size: 30px;
   text-align: center;
   position: relative;
 }
@@ -46,8 +46,8 @@ body{
   top: 50%;
   transform: translateY(-50%);
 }
-.menu-main:before {left: 15px;}
-.menu-main:after {right: 15px;}
+.menu-main:before {left: 20px;}
+.menu-main:after {right: 20px;}
 .menu-main li {
   display: inline-block;
   padding: 5px 0;
@@ -58,8 +58,8 @@ body{
   margin: 2px 5px;
   padding: 8px 15px;
   font-family: 'PT&nbspSans', sans-serif;
-  font-size: 18px;
-  color: #777777;
+  font-size:20px;
+  color: yellow;
   border-bottom: 1px solid transparent;
   transition: .3s linear;
 }
@@ -171,10 +171,15 @@ main .publications-list .article-card .button-container {
  height: 20em;
 }
 .blog .card-title{
- color:yellow;
+ color:black;
   
 }
 .blog .card-body{
  padding: 1em;
- height: 250px;
+ height: 450px;
+ background-image: url(../images/pivo.jpg);
+}
+.main-logo{
+    text-align: left;
+    color: yellow;
 }
